# ROS2

./: .gitignore  Dockerfile  README.md  build.sh  build_workspace.sh  run.sh
ros2_ws/src/activity_02/: package.xml  setup.cfg  setup.py
ros2_ws/src/activity_02/activity_02/: activity_02_node1.py  activity_02_node2.py
ros2_ws/src/camera_pkg/: package.xml  setup.py
ros2_ws/src/camera_pkg/camera_pkg/: image_processing.py  transmission.py
ros2_ws/src/cpp_template_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_template_pkg/src/: template_node.cpp
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: my_first_node.cpp
ros2_ws/src/my_py_pkg/: setup.py
ros2_ws/src/my_python_pkg/: package.xml  setup.py
ros2_ws/src/my_python_pkg/my_python_pkg/: my_first_node.py
ros2_ws/src/py_template_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/py_template_pkg/py_template_pkg/: py_node_temp.py
